--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first project</title>
+    <link rel="stylesheet" href="blog/style.css">
 </head>
 <body>
-    
+    <h2>shahedul</h2>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit voluptatibus harum aut qui delectus officiis repudiandae quia illum minima maiores?</p>
 </body>
 </html>
